# Amethyst-Template

./: .gitignore  CMakeLists.txt  README.md  manifest.json.in  mod.json  mod.json.in  xmake.lua
.github/workflows/: build.yml
data/: config.json
data/packs/RP/: manifest.json
data/packs/RP/textures/: item_texture.ts
src/: dllmain.cpp  dllmain.h  dllmain.hpp
